feat: ultimate optimization suite with zig and compile-time metrics